packages/go/include/xberg.h

/**
 * VTable for C plugin bridges implementing the `TokenizerBackend` trait.
 *
 * # Safety
 *
 * All function pointers must be valid for the lifetime of any bridge created from
 * this vtable.  `free_user_data`, when non-null, is called once with `user_data`
 * when the bridge is dropped.
 */
typedef struct XBERGXbergTokenizerBackendVTable {
  /**
   * Return a null-terminated UTF-8 name string into `out_name`; return 0 on success.
   */
  int32_t (*name_fn)(const void *user_data,
                     char **out_name,
                     char **out_error);
  /**
   * Return a null-terminated UTF-8 version string into `out_version`; return 0 on success.
   */
  int32_t (*version_fn)(const void *user_data,
                        char **out_version,
                        char **out_error);
  /**
   * Initialise the plugin; return 0 on success, non-zero on failure (error text in `out_error`).
   */
  int32_t (*initialize_fn)(const void *user_data,
                           char **out_error);
  /**
   * Shut down the plugin; return 0 on success, non-zero on failure (error text in `out_error`).
   */
  int32_t (*shutdown_fn)(const void *user_data,
                         char **out_error);
  /**
   * Count the tokens in `text` according to this backend's tokenizer.
   */
  uintptr_t (*count_tokens)(const void *user_data,
                            const char *text);
  /**
   * Optional string destructor: called for strings returned by vtable callbacks.
   */
  void (*free_string)(char*);
  /**
   * Optional destructor: called once with `user_data` when the bridge is dropped.
   */
  void (*free_user_data)(void*);
} XBERGXbergTokenizerBackendVTable;
/**
 * Unregister a previously registered C plugin by name.
 *
 * # Parameters
 *
 * - `name`: null-terminated UTF-8 plugin name. Must not be null.
 * - `out_error`: receives a heap-allocated error string on failure.
 *
 * # Safety
 *
 * `name` must point to a valid null-terminated C string.
 */
int32_t xberg_unregister_reranker_backend(const char *name,
                                          char **out_error);
/**
 * Remove all registered C plugins of this trait.
 *
 * # Parameters
 *
 * - `out_error`: receives a heap-allocated error string on failure.
 *
 * # Safety
 *
 * `out_error` may be null. When non-null, the caller owns the resulting string
 * and must free it with `xberg_free_string`.
 */
int32_t xberg_clear_reranker_backend(char **out_error);
/**
 * Register a C plugin implementing `TokenizerBackend` via a vtable.
 *
 * # Parameters
 *
 * - `name`: null-terminated UTF-8 plugin name. Must not be null.
 * - `vtable`: vtable with function pointers implementing the trait.
 * - `user_data`: opaque pointer forwarded to every vtable function.
 * - `out_error`: receives a heap-allocated error string on failure.
 *
 * # Safety
 *
 * All function pointers in `vtable` must remain valid until the plugin is
 * unregistered. `user_data` must be safe to use from any thread that calls
 * into the plugin.
 */
int32_t xberg_register_tokenizer_backend(const char *name,
                                         const struct XBERGXbergTokenizerBackendVTable *vtable,
                                         const void *user_data,
                                         char **out_error);
/**
 * Unregister a previously registered C plugin by name.
 *
 * # Parameters
 *
 * - `name`: null-terminated UTF-8 plugin name. Must not be null.
 * - `out_error`: receives a heap-allocated error string on failure.
 *
 * # Safety
 *
 * `name` must point to a valid null-terminated C string.
 */
int32_t xberg_unregister_tokenizer_backend(const char *name,
                                           char **out_error);
/**
 * Remove all registered C plugins of this trait.
 *
 * # Parameters
 *
 * - `out_error`: receives a heap-allocated error string on failure.
 *
 * # Safety
 *
 * `out_error` may be null. When non-null, the caller owns the resulting string
 * and must free it with `xberg_free_string`.
 */
int32_t xberg_clear_tokenizer_backend(char **out_error);