packages/csharp/src/Xberg/NativeMethods.cs


    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_unregister_reranker_backend")]
    internal static extern int UnregisterRerankerBackend([MarshalAs(UnmanagedType.LPUTF8Str)] string name, out IntPtr outError);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_clear_reranker_backend")]
    internal static extern int ClearRerankerBackend(out IntPtr outError);


    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_register_tokenizer_backend")]
    internal static extern int RegisterTokenizerBackend([MarshalAs(UnmanagedType.LPUTF8Str)] string name, IntPtr vtable, IntPtr userData, out IntPtr outError);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_unregister_tokenizer_backend")]
    internal static extern int UnregisterTokenizerBackend([MarshalAs(UnmanagedType.LPUTF8Str)] string name, out IntPtr outError);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_clear_tokenizer_backend")]
    internal static extern int ClearTokenizerBackend(out IntPtr outError);

}
